--- a/html/design.html
+++ b/html/design.html
@@ -47,12 +47,24 @@
         <h1 class=myname>Thomas Rudge</h1>
         <nav id=mainnav>
 	       <ul class=navlist>
-            <li class=navli><a id=home_symbol href="../index.html" title="Home"><span class=main_glyph>&#9978;</span></a></li>
-		      <li class=navli><a href="professional.html" title="Professional work experience">Professional <span class=main_glyph>&#9874;</span></a></li>
-		      <li class=navli><a href="software.html" title="Personal software projects">Software <span class=main_glyph>&#9000;</span></a></li>
-		      <li class=navli><a id=selected_page title="Design work">Design <span class=main_glyph>&#9998;</span></a></li>
-		      <li class=navli><a href="photography.html#PHOTO" title="Photographs">Photography <span class=main_glyph>&#128247;</span></a></li>
-		      <li class=navli><a href="contact.html" title="Contact me">Contact <span class=main_glyph>&#9993;</span></a></li>
+           <li class=navli id=navlihome>
+              <a id=home href="../index.html" title="Home"></a>
+            </li>
+            <li class=navli id=navliprof>
+              <a id=prof href="professional.html" title="Professional work experience"></a>
+            </li>
+            <li class=navli id=navlisoft>
+              <a id=soft href="software.html" title="Personal software projects"></a>
+            </li>
+            <li class=navli id=navlidesign_selected>
+              <a id=dsgn_selected title="Design work"></a>
+            </li>
+            <li class=navli id=navliphoto>
+              <a id=phtgph href="photography.html#PHOTO" title="Photographs"></a>
+            </li>
+            <li class=navli id=navlicontact>
+              <a id=cntct href="contact.html" title="Contact me"></a>
+            </li>
 	       </ul>
         </nav>
         <div id=navmobile>
@@ -60,12 +72,36 @@
         </div>
         <div id=mobilelist>
           <ul class=gen_text>
-            <li><a class=mobile_menu_item href="../index.html" title="Home"><span class=main_glyph>&#9978;</span> Home</li>
-            <li><a class=mobile_menu_item href="professional.html" title="Professional work experience"><span class=main_glyph>&#9874;</span> Professional</a></li>
-		        <li><a class=mobile_menu_item href="software.html" title="Personal software projects"><span class=main_glyph>&#9000;</span> Software</a></li>
-		        <li><a id=mobile_selected title="Design work"><span class=main_glyph>&#9998;</span> Design</a></li>
-		        <li><a class=mobile_menu_item href="photography.html" title="Photographs"><span class=main_glyph>&#128247;</span>Photography</a></li>
-		        <li><a class=mobile_menu_item href="contact.html" title="Contact me"><span class=main_glyph>&#9993;</span> Contact</a></li>
+            <li>
+              <a class=mobile_menu_item href="../index.html" title="Home">
+                <span class=main_glyph>&#9978;</span> Home
+              </a>
+            </li>
+            <li>
+              <a class=mobile_menu_item href="professional.html" title="Professional work experience">
+                <span class=main_glyph>&#9874;</span> Professional
+              </a>
+            </li>
+		        <li>
+              <a class=mobile_menu_item href="software.html" title="Personal software projects">
+                <span class=main_glyph>&#9000;</span> Software
+              </a>
+            </li>
+		        <li>
+              <a id=mobile_selected title="Design work">
+                <span class=main_glyph>&#9998;</span> Design
+              </a>
+            </li>
+		        <li>
+              <a class=mobile_menu_item href="photography.html" title="Photographs">
+                <span class=main_glyph>&#128247;</span>Photography
+              </a>
+            </li>
+		        <li>
+              <a class=mobile_menu_item href="contact.html" title="Contact me">
+                <span class=main_glyph>&#9993;</span> Contact
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -88,6 +124,7 @@
         </li>
       </ul>
     </header>
+    <br>
     <div class=gen_div>
       <img id=DESIGN src="../images/design/main.png" alt="Graphic Design Banner">
     </div>
@@ -190,8 +227,8 @@
       </div>
     </div>
     <div id=blackdiv>
-    <a id=arrow_left  class=arrow onclick='imageToggle(-1)'>&#10096;</a>
-    <a id=arrow_right class=arrow onclick='imageToggle(1)'>&#10097;</a>
+      <a id=arrow_left  class=arrow onclick='imageToggle(-1)'>&#10096;</a>
+      <a id=arrow_right class=arrow onclick='imageToggle(1)'>&#10097;</a>
     </div>
     <br>
     <hr>
