--- a/html/photography.html
+++ b/html/photography.html
@@ -38,7 +38,7 @@
 </head>
 
 <body id=bphoto>
-  <div id=container>
+  <div id=container class=black>
     <header class=black>
       <a href="../index.html" title="Home">
         <img class=myphoto src="../images/logos/me.png" alt='My head photo'>
@@ -47,12 +47,24 @@
         <h1 class=myname>Thomas Rudge</h1>
         <nav id=mainnav>
 	       <ul class=navlist>
-           <li class=navli><a id=home_symbol class=black href="../index.html" title="Home"><span class=main_glyph>&#9978;</span></a></li>
-		       <li class=navli><a class=black href="professional.html" title="Professional work experience">Professional <span class=main_glyph>&#9874;</span></a></li>
-		      <li class=navli><a class=black href="software.html" title="Personal software projects">Software <span class=main_glyph>&#9000;</span></a></li>
-		      <li class=navli><a class=black href="design.html#DESIGN" title="Design work">Design <span class=main_glyph>&#9998;</span></a></li>
-		      <li class=navli><a class=black id=selected_page title="Photographs">Photography <span class=main_glyph>&#128247;</span></a></li>
-		      <li class=navli><a class=black href="contact.html" title="Contact me">Contact <span class=main_glyph>&#9993;</span></a></li>
+           <li class=navli id=navlihome_black>
+              <a id=home href="../index.html" title="Home"></a>
+            </li>
+            <li class=navli id=navliprof_black>
+              <a id=prof href="professional.html" title="Professional work experience"></a>
+            </li>
+            <li class=navli id=navlisoft_black>
+              <a id=soft href="software.html" title="Personal software projects"></a>
+            </li>
+            <li class=navli id=navlidesign_black>
+              <a id=dsgn href="design.html#DESIGN" title="Design work"></a>
+            </li>
+            <li class=navli id=navliphoto_selected>
+              <a id=phtgph_selected title="Photographs"></a>
+            </li>
+            <li class=navli id=navlicontact_black>
+              <a id=cntct href="contact.html" title="Contact me"></a>
+            </li>
 	       </ul>
         </nav>
         <div id=navmobile>
@@ -60,12 +72,36 @@
         </div>
         <div id=mobilelist>
           <ul class=gen_text>
-            <li><a class=mobile_menu_item href="../index.html" title="Home"><span class=main_glyph>&#9978;</span> Home</li>
-            <li><a class=mobile_menu_item href="professional.html" title="Professional work experience"><span class=main_glyph>&#9874;</span> Professional</a></li>
-		        <li><a class=mobile_menu_item href="software.html" title="Personal software projects"><span class=main_glyph>&#9000;</span> Software</a></li>
-		        <li><a class=mobile_menu_item href="design.html" title="Design work"><span class=main_glyph>&#9998;</span> Design</a></li>
-		        <li><a id=mobile_selected title="Photographs"><span class=main_glyph>&#128247;</span>Photography</a></li>
-		        <li><a class=mobile_menu_item href="contact.html" title="Contact me"><span class=main_glyph>&#9993;</span> Contact</a></li>
+            <li>
+              <a class=mobile_menu_item href="../index.html" title="Home">
+                <span class=main_glyph>&#9978;</span> Home
+              </a>
+            </li>
+            <li>
+              <a class=mobile_menu_item href="professional.html" title="Professional work experience">
+                <span class=main_glyph>&#9874;</span> Professional
+              </a>
+            </li>
+		        <li>
+              <a class=mobile_menu_item href="software.html" title="Personal software projects">
+                <span class=main_glyph>&#9000;</span> Software
+              </a>
+            </li>
+		        <li>
+              <a class=mobile_menu_item href="design.html" title="Design work">
+                <span class=main_glyph>&#9998;</span> Design
+              </a>
+            </li>
+		        <li>
+              <a id=mobile_selected title="Photographs">
+                <span class=main_glyph>&#128247;</span>Photography
+              </a>
+            </li>
+		        <li>
+              <a class=mobile_menu_item href="contact.html" title="Contact me">
+                <span class=main_glyph>&#9993;</span> Contact
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -88,6 +124,7 @@
         </li>
       </ul>
     </header>
+    <br>
     <div class=gen_div>
       <img id=PHOTO src="../images/photography/main1.png" alt="Photography Banner">
     </div>
