--- a/html/professional.html
+++ b/html/professional.html
@@ -46,25 +46,61 @@
         <h1 class=myname>Thomas Rudge</h1>
         <nav id=mainnav>
 	       <ul class=navlist>
-            <li class=navli><a id=home_symbol href="../index.html" title="Home"><span class=main_glyph>&#9978;</span></a></li>
-		      <li class=navli><a id=selected_page title="Professional work experience">Professional <span class=main_glyph>&#9874;</span></a></li>
-		      <li class=navli><a href="software.html" title="Personal software projects">Software <span class=main_glyph>&#9000;</span></a></li>
-		      <li class=navli><a href="design.html#DESIGN" title="Design work">Design <span class=main_glyph>&#9998;</span></a></li>
-		      <li class=navli><a href="photography.html#PHOTO" title="Photographs">Photography <span class=main_glyph>&#128247;</span></a></li>
-		      <li class=navli><a href="contact.html" title="Contact me">Contact <span class=main_glyph>&#9993;</span></a></li>
+           <li class=navli id=navlihome>
+              <a id=home href="../index.html" title="Home"></a>
+            </li>
+            <li class=navli id=navliprof_selected>
+              <a id=prof_selected title="Professional work experience"></a>
+            </li>
+            <li class=navli id=navlisoft>
+              <a id=soft href="software.html" title="Personal software projects"></a>
+            </li>
+            <li class=navli id=navlidesign>
+              <a id=dsgn href="design.html#DESIGN" title="Design work"></a>
+            </li>
+            <li class=navli id=navliphoto>
+              <a id=phtgph href="photography.html#PHOTO" title="Photographs"></a>
+            </li>
+            <li class=navli id=navlicontact>
+              <a id=cntct href="contact.html" title="Contact me"></a>
+            </li>
 	       </ul>
         </nav>
         <div id=navmobile>
-        <a id=mobile_navlink onclick='toggleNavPane(1)'></a>
+          <a id=mobile_navlink onclick='toggleNavPane(1)'></a>
         </div>
         <div id=mobilelist>
           <ul class=gen_text>
-            <li><a class=mobile_menu_item href="../index.html" title="Home"><span class=main_glyph>&#9978;</span> Home</li>
-            <li><a id=mobile_selected title="Professional work experience"><span class=main_glyph>&#9874;</span> Professional</a></li>
-		        <li><a class=mobile_menu_item href="software.html" title="Personal software projects"><span class=main_glyph>&#9000;</span> Software</a></li>
-		        <li><a class=mobile_menu_item href="design.html" title="Design work"><span class=main_glyph>&#9998;</span> Design</a></li>
-		        <li><a class=mobile_menu_item href="photography.html" title="Photographs"><span class=main_glyph>&#128247;</span>Photography</a></li>
-		        <li><a class=mobile_menu_item href="contact.html" title="Contact me"><span class=main_glyph>&#9993;</span> Contact</a></li>
+            <li>
+              <a class=mobile_menu_item href="../index.html" title="Home">
+                <span class=main_glyph>&#9978;</span> Home
+              </a>
+            </li>
+            <li>
+              <a id=mobile_selected title="Professional work experience">
+                <span class=main_glyph>&#9874;</span> Professional
+              </a>
+            </li>
+		        <li>
+              <a class=mobile_menu_item href="software.html" title="Personal software projects">
+                <span class=main_glyph>&#9000;</span> Software
+              </a>
+            </li>
+		        <li>
+              <a class=mobile_menu_item href="design.html" title="Design work">
+                <span class=main_glyph>&#9998;</span> Design
+              </a>
+            </li>
+		        <li>
+              <a class=mobile_menu_item href="photography.html" title="Photographs">
+                <span class=main_glyph>&#128247;</span>Photography
+              </a>
+            </li>
+		        <li>
+              <a class=mobile_menu_item href="contact.html" title="Contact me">
+                <span class=main_glyph>&#9993;</span> Contact
+              </a>
+            </li>
           </ul>
         </div>
       </div>
