--- a/index.html
+++ b/index.html
@@ -51,12 +51,24 @@
         <h1 class=myname>Thomas Rudge</h1>
         <nav id=mainnav>
 	        <ul class=navlist>
-            <li class=navli><a id=selected_page title="Home"><span class=main_glyph>&#9978;</span></a></li>
-		        <li class=navli><a href="html/professional.html" title="Professional work experience">Professional <span class=main_glyph>&#9874;</span></a></li>
-		        <li class=navli><a href="html/software.html" title="Personal software projects">Software <span class=main_glyph>&#9000;</span></a></li>
-		        <li class=navli><a href="html/design.html#DESIGN" title="Design work">Design <span class=main_glyph>&#9998;</span></a></li>
-		        <li class=navli><a href="html/photography.html#PHOTO" title="Photographs">Photography <span class=main_glyph>&#128247;</span></a></li>
-		        <li class=navli><a href="html/contact.html" title="Contact me">Contact <span class=main_glyph>&#9993;</span></a></li>
+            <li class=navli id=navlihome_selected>
+              <a id=home_selected title="Home"></a>
+            </li>
+		        <li class=navli id=navliprof>
+              <a id=prof href="html/professional.html" title="Professional work experience"></a>
+            </li>
+		        <li class=navli id=navlisoft>
+              <a id=soft href="html/software.html" title="Personal software projects"></a>
+            </li>
+		        <li class=navli id=navlidesign>
+              <a id=dsgn href="html/design.html#DESIGN" title="Design work"></a>
+            </li>
+		        <li class=navli id=navliphoto>
+              <a id=phtgph href="html/photography.html#PHOTO" title="Photographs"></a>
+            </li>
+		        <li class=navli id=navlicontact>
+              <a id=cntct href="html/contact.html" title="Contact me"></a>
+            </li>
 	        </ul>
         </nav>
         <div id=navmobile>
@@ -64,12 +76,36 @@
         </div>
         <div id=mobilelist>
           <ul class=gen_text>
-            <li><a id=mobile_selected title="Home"><span class=main_glyph>&#9978;</span> Home</li>
-            <li><a class=mobile_menu_item href="html/professional.html" title="Professional work experience"><span class=main_glyph>&#9874;</span> Professional</a></li>
-		        <li><a class=mobile_menu_item href="html/software.html" title="Personal software projects"><span class=main_glyph>&#9000;</span> Software</a></li>
-		        <li><a class=mobile_menu_item href="html/design.html" title="Design work"><span class=main_glyph>&#9998;</span> Design</a></li>
-		        <li><a class=mobile_menu_item href="html/photography.html" title="Photographs"><span class=main_glyph>&#128247;</span>Photography</a></li>
-		        <li><a class=mobile_menu_item href="html/contact.html" title="Contact me"><span class=main_glyph>&#9993;</span> Contact</a></li>
+            <li>
+              <a id=mobile_selected title="Home">
+                <span class=main_glyph>&#9978;</span> Home
+              </a>
+            </li>
+            <li>
+              <a class=mobile_menu_item href="html/professional.html" title="Professional work experience">
+                <span class=main_glyph>&#9874;</span> Professional
+              </a>
+            </li>
+		        <li>
+              <a class=mobile_menu_item href="html/software.html" title="Personal software projects">
+                <span class=main_glyph>&#9000;</span> Software
+              </a>
+            </li>
+		        <li>
+              <a class=mobile_menu_item href="html/design.html" title="Design work">
+                <span class=main_glyph>&#9998;</span> Design
+              </a>
+            </li>
+		        <li>
+              <a class=mobile_menu_item href="html/photography.html" title="Photographs">
+                <span class=main_glyph>&#128247;</span>Photography
+              </a>
+            </li>
+		        <li>
+              <a class=mobile_menu_item href="html/contact.html" title="Contact me">
+                <span class=main_glyph>&#9993;</span> Contact
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -106,12 +142,12 @@
     </text>
     </svg>
     <div id=intro_text class=gen_div>
-    <span class='gen_text gen_title big_text margin40 no_bottom'>Hello...</span>
-    <p class='gen_text big_text gradient_text margin40 justify no_top'>
-    ...my name is Thomas. I have a fairly long and varied history, but if there is one thing that ties it all together, it’s a desire for the novel combined with a strong ability to assimilate complex ideas quickly and effectively. I’m a Business Analyst, Process Expert and Administrator, self-taught Software Developer, Graphic Designer, and Photographer, who is currently dabbling in Web Design. Welcome to my site. 
-    </p>
+      <span class='gen_text gen_title big_text margin40 no_bottom'>Hello...</span>
+      <p class='gen_text big_text gradient_text margin40 justify no_top'>
+      ...my name is Thomas. I have a fairly long and varied history, but if there is one thing that ties it all together, it’s a desire for the novel combined with a strong ability to assimilate complex ideas quickly and effectively. I’m a Business Analyst, Process Expert and Administrator, self-taught Software Developer, Graphic Designer, and Photographer, who is currently dabbling in Web Design. Welcome to my site. 
+      </p>
     </div>
-    <br><br><br>
+    <br><br>
     <footer id=relative_footer>
     &#169; Copyright 2016 Thomas Edward Rudge. All rights reserved. All materials presented on this website are protected by copyright.<br>
     Site not working properly? <span class=main_glyph>&#128534;</span> <a href="mailto:thomas.rudge85@gmail.com?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
