Improved landing page for non webkit browsers
Updated SVG gradiated text for non webkit browsers

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </li>
       </ul>
     </header>
-    <svg id=intro_svg viewBox="0 0 990 500" preserveAspectRatio="xMidYMid meet"'>
+    <svg id=intro_svg viewBox="0 0 990 300" preserveAspectRatio="xMidYMid meet"'>
       <defs>
         <linearGradient id="grad1" x1="0%" y1="0%" x2="0%" y2="100%">
           <stop offset="0%" style="stop-color:#01a2ff;stop-opacity:1" />
@@ -137,8 +137,13 @@
       </defs>
       <text fill="url(#grad1)" class='gen_text big_text margin40 justify' x="0" y="0">
     <tspan x='70' y='30'>Hello...</tspan>
-    <tspan x='70' y='60'>my name is Thomas. </tspan>
-    <tspan x='70' y='90'>I eat green eggs and ham yo.</tspan>
+    <tspan x='70' y='63'>...my name is Thomas. I have a fairly long and varied history, but if</tspan>
+    <tspan x='70' y='96'>there is one thing that ties it all together, it’s a desire for the novel</tspan>
+    <tspan x='70' y='129'>combined with a strong ability to assimilate complex ideas quickly</tspan>
+    <tspan x='70' y='162'>and effectively. I’m a Business Analyst, Process Expert and</tspan>
+    <tspan x='70' y='195'>Administrator, self-taught Software Developer, Graphic Designer,</tspan>
+    <tspan x='70' y='228'>and Photographer, who is currently dabbling in Web Design.</tspan>
+    <tspan x='70' y='261'>Welcome to my site.</tspan>
     </text>
     </svg>
     <div id=intro_text class=gen_div>
