--- a/html/contact.html
+++ b/html/contact.html
@@ -126,7 +126,7 @@
     <div class=rowcontainer>
       <div class=design_div id=contact_div>
         <div id=emailme_big>
-          <a class=contact_link href="mailto:thomas.rudge@outlook.com"> </a>
+          <a class=contact_link href="mailto:me@thomasrudge.co.uk"> </a>
         </div>
         <div id=linkedin_big>
           <a class=contact_link href="https://www.linkedin.com/in/thomasrudge" target="_blank"> </a>
@@ -135,7 +135,7 @@
     </div>
     <footer id=index_footer>
     &#169; Copyright 2016 Thomas Edward Rudge. All rights reserved. All materials presented on this website are protected by copyright.<br>
-    Site not working properly? &#128534; <a href='mailto:thomas.rudge85@gmail.com?Subject=Something%20is%20wrong%20with%20your%20site!'>Please let me know.</a>
+    Site not working properly? &#128534; <a class=normal_link href='mailto:thomas.rudge85@gmail.com?Subject=Something%20is%20wrong%20with%20your%20site!'>Please let me know.</a>
     </footer>
   </div>
 </body>
