--- a/html/professional.html
+++ b/html/professional.html
@@ -127,13 +127,13 @@
     <div class=gen_div>
       <p class='gen_text justify med_text margin70'>
         <span class='gen_title title_text'>Curriculum Vitae</span><br>
-        This tool will generate Swift MT940 and MT950 cash statements from a specific csv format.
+        This section is incomplete, and currently under development.
       </p>
     </div>
     <br>
     <div class='gen_div block_'>
       <p class='gen_text justify med_text margin70 no_bottom'>
-        <span class='gen_title no_top no_bottom'>Skills</span><br>
+        <span class='gen_title no_top no_bottom blue_text'><u>Skills</u></span><br>
       </p>
       <!-- This will only appear if the screen is too narrow for the table -->
       <div id=skill_list class='gen_text margin40 no_top'>
@@ -241,7 +241,7 @@
     <div class='gen_div block_'>
       <div>
         <p class='gen_text justify med_text margin70 no_bottom'>
-          <span class='gen_title no_top no_bottom'>Experience</span><br>
+          <span class='gen_title no_top no_bottom blue_text'><u>Experience</u></span><br>
         </p>
       </div>
       <!-- This will only appear if the screen is too narrow to support the table -->
@@ -552,7 +552,7 @@
     <br>
     <div class=gen_div>
       <p class='gen_text justify med_text margin70'>
-        <span class=gen_title>Testimonials and Awards</span>
+        <span class='gen_title blue_text'><u>Testimonials and Awards</u></span>
         Significant Technology Achievement Award in recognition of the outstanding contribution to the Kenya Replatforming Programme.<br> – Awarded by CIO of Technology Department & COO of Barclays Africa
         <br>
         <br>
@@ -569,9 +569,34 @@
       </p>
     </div>
     <br>
+    <div class=gen_div>
+      <p class='gen_text justify med_text margin70'>
+        <span class='gen_title blue_text'><u>Key Projects</u></span>
+        <b>Nepos –</b> A Point-of-Sale and cash management system I built for start-ups and small businesses in India. Read more about it <a class=normal_link href='software.html'>here.</a>
+        <br>
+        <br>
+        <b>TLM Major System Upgrade (2.0 to 2.7) –</b> A multi million pound project of global significance to the bank to upgrade the core reconciliation platform, Smartstream’s Transaction Lifecycle Management system. Liaised with key stakeholders and business operational areas across the globe to elicit functional and non-functional requirements via formal and informal interviews, requirements workshops, and document analysis. Performed solution assessment by working closely with the system vendor to identify major system changes, and translating those changes into business impact with recommended updates to configuration, interfaces, risk profiles, and operational processes and controls. Developed use cases and subsequent user test cases and managed their execution by the testing teams in the UK and India. Managed defects and performed analysis to identify business impact and potential solutions. Collaborated with technical teams to write the implementation plan and owned the associated business actions. Managed implementation as the business technical lead, ensuring coordination between technical and business teams and periodically reporting progress to senior stakeholders.
+        <br>
+        <br>
+        <b>Kenya Accounts Replatforming –</b> As part of a planned migration to a new accounting platform for Barclays Kenya’s retail accounts, I worked with teams in the UK, Kenya, and Zimbabwe to identify impact to the UK reconciliation service. I identified new requirements from Kenya Retail Bank, and requirements from the UK service areas. I wrote relevant test cases and managed their execution by business teams in Kenya and the UK. I designed and wrote the UK implementation activities and managed their execution by various teams. As a result of my activities on the project and its seamless implementation I was awarded the “Significant Technology Achievement Award” by the CIO of Technology and COO of Barclays Africa.
+        <br>
+        <br>
+        <b>Faster Payments Service (FPS) –</b> As part of a project to implement a new national payment scheme I worked in the capacity of a business analyst representing the corporate bank’s global payment services and reconciliation area. Using elicited requirements I collaborated with system engineers, technology teams, and operations areas to assess proposed solutions to the reconciliation of internal accounting and scheme settlement cycles. I then developed business process models (workflow diagrams), data flow diagrams, and operational procedures, covering primary and exceptional scenarios which were handed over to designated business areas. I performed a risk assessment on the new processes and worked alongside Sarbanes Oxley to develop a control framework for the reconciliation teams.
+        <br>
+      </p>
+    </div>
+    <br>
+    <br>
+    <div class=gen_div>
+      <p class='gen_text justify med_text margin70'>
+      <a class=normal_link href='contact.html'>Contact Me</a>
+      </p>
+    </div>
+    <br>
+    <br>
     <footer class=relative_footer>
     &#169; Copyright 2016 Thomas Edward Rudge. All rights reserved. All materials presented on this website are protected by copyright.<br>
-    Site not working properly? <span class=main_glyph>&#128534;</span> <a href="mailto:thomas.rudge85@gmail.com?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
+    Site not working properly? <span class=main_glyph>&#128534;</span> <a class=normal_link href="mailto:thomas.rudge85@gmail.com?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
     </footer>
   </div>
 </body>
