Added more detail
Added more details to the professional page.

--- a/html/software.html
+++ b/html/software.html
@@ -131,7 +131,7 @@
       </p>
     </div>
     <hr>
-    <div class='gen_div margin40 mobile_parent'>
+    <div class='gen_div margin40 mobile_parent' id=nepos>
       <a href="http://neposservice.wix.com/nepos" title="Nepos Software" target="_blank" >
         <img class='genphoto mobile_child img150' src="../images/logos/nepos_logo.png" alt="NEPOS Logo">
       </a>
@@ -165,7 +165,7 @@
     <hr>
     <div class='gen_div fullwidth'>
       <p class='gen_text centred med_text'>
-      <span style="color: #4e6df0; font-weight: bold;"><span class=main_glyph>&#9978;</span></span> This website has its own <a class=normal_link href="https://github.com/Thomas-Rudge/personal-website" target="_blank">GitHub repo</a>, check it out.
+      <img src='../favicon/favicon-16x16.png' alt='Small logo'> This website has its own <a class=normal_link href="https://github.com/Thomas-Rudge/personal-website" target="_blank">GitHub repo</a>, check it out.
       </p>
     </div>
     <hr>
