--- a/html/professional.html
+++ b/html/professional.html
@@ -124,11 +124,42 @@
       </ul>
     </header>
     <br>
-    <div class=gen_div>
+    <div class='block_ gen_div'>
       <p class='gen_text justify med_text margin70'>
         <span class='gen_title title_text'>Curriculum Vitae</span><br>
-        This section is incomplete, and currently under development.
+        Business Analyst, Operations Expert, and Software Developer, with over 8 year's experience in Business and IT Change. 
       </p>
+      <p class='gen_text justify med_text margin70 no_bottom'>
+        <span class='gen_title no_top no_bottom blue_text'><u>Summary</u></span><br>
+      </p>
+      <ul  class='gen_text justify med_text margin70 no_top' type='disc'>
+          <li>
+          Sole designer and developer of <a class=normal_link href='software.html#nepos'>Nepos</a>, a point of sale and cash management system currently being distributed in north east India.
+          </li>
+          <li>
+          Proven leadership skills with extensive experience managing operation, test, and implementation teams, across both local and global area. 
+          </li>
+          <li>
+          Capable of achieving operational efficiencies through operations and data analysis, process redesign, and bespoke automation.
+            <ul type='circle'>
+              <li>
+              In my position as a Technical SME I improved the straight through processing of the main reconciliation system by 5% in the first 6 months of the role. The STP improvement equated to four full time employees.
+              </li>
+              <li>
+              Reduced a manual reconciliation process from over an hour to less than 10 minutes, by redesigning the user dashboard layout and automating some of the process. 
+              </li>
+            </ul>
+          </li>
+          <li>
+          Overseen the success of numerous <a class=normal_link href='#projects'>projects</a> as a Business Analyst and TSME, attaining a firm knowledge of the end to end project life cycle and methodologies.
+          </li>
+          <li>
+          High risk awareness. Completed risk assessments, created control frameworks, and performed audits for new and updated operational processes and systems; Both internally and in collaboration with third parties like Sarbanes Oxley and Deloittes.
+          </li>
+          <li>
+          Solid communication skills. Experienced in facilitating requirements workshops, brainstorming sessions, training sessions, presentations, and meetings at all levels. Capable of presenting complex and technical information in a coherent and succinct way.
+          </li>
+        </ul>
     </div>
     <br>
     <div class='gen_div block_'>
@@ -349,7 +380,7 @@
           </tr>
           <tr>
             <td>
-            Account Manager
+            Account Manager <span class=small_text>Global Payments</span>
             </td>
           </tr>
           <tr>
@@ -500,7 +531,7 @@
             May 2007
             </td>
             <td>
-            Account Manager
+            Account Manager <span class=small_text>Global Payments</span>
             </td>
             <td>
             Barclays Plc
@@ -569,7 +600,7 @@
       </p>
     </div>
     <br>
-    <div class=gen_div>
+    <div class=gen_div id=projects>
       <p class='gen_text justify med_text margin70'>
         <span class='gen_title blue_text'><u>Key Projects</u></span>
         <b>Nepos –</b> A Point-of-Sale and cash management system I built for start-ups and small businesses in India. Read more about it <a class=normal_link href='software.html'>here.</a>
@@ -584,6 +615,186 @@
         <b>Faster Payments Service (FPS) –</b> As part of a project to implement a new national payment scheme I worked in the capacity of a business analyst representing the corporate bank’s global payment services and reconciliation area. Using elicited requirements I collaborated with system engineers, technology teams, and operations areas to assess proposed solutions to the reconciliation of internal accounting and scheme settlement cycles. I then developed business process models (workflow diagrams), data flow diagrams, and operational procedures, covering primary and exceptional scenarios which were handed over to designated business areas. I performed a risk assessment on the new processes and worked alongside Sarbanes Oxley to develop a control framework for the reconciliation teams.
         <br>
       </p>
+    </div>
+    <br>
+    <div class='gen_div block_'>
+      <div>
+        <p class='gen_text justify med_text margin70 no_bottom'>
+          <span class='gen_title no_top no_bottom blue_text'><u>Education</u></span><br>
+        </p>
+      </div>
+      <!-- This will only appear if the screen is too narrow to support the table -->
+      <div id=short_table1 class=margin70>
+        <span class='margin40 gen_title small_text'>Standard</span>
+        <table class='standard_table decorated margin40 no_top'>
+          <tr>
+            <th>
+            </th>
+          </tr>
+          <tr>
+            <td>
+            BA (Hons) Animation
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Sep 2003 - Nov 2006
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Southampton Solent University
+            </td>
+          </tr>
+          <tr>
+            <th>
+            </th>
+          </tr>
+          <tr>
+            <td>
+            ND Graphic Design
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Jul 2001 - Jul 2003
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Bournemouth & Poole College
+            </td>
+          </tr>
+        </table>
+      </div>
+      <br>
+      <div id=short_table2 class=margin70>
+        <span class='margin40 gen_title small_text'>Online</span>
+        <table class='standard_table decorated margin40'>
+          <tr>
+            <th>
+            </th>
+          </tr>
+          <tr>
+            <td>
+            Business Analysis Practitioner <span class=small_text>(IIBA Endorsed)</span>
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Jan 2014
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Business Analysis Excellence Ltd
+            </td>
+          </tr>
+          <tr>
+            <th>
+            </th>
+          </tr>
+          <tr>
+            <td>
+            Learn To Program: The Fundamentals
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Oct 2013
+            </td>
+          </tr>
+          <tr>
+            <td>
+            Coursera <span class=small_text>(University of Toronto)</span>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <!-- This will only appear if the screen is wide enough -->
+      <div id=full_table1 class=margin70>
+        <span class='margin70 gen_title small_text'>Standard</span>
+        <table class='standard_table decorated decorated_colour margin70 no_top'>
+          <tr>
+            <th colspan=2>
+            Period
+            </th>
+            <th>
+            Course
+            </th>
+            <th>
+            Institution
+            </th>
+          </tr>
+          <tr>
+            <td class=centred_txt>
+            Sep 2003
+            </td>
+            <td class=centred_txt>
+            Nov 2006
+            </td>
+            <td>
+            BA (Hons) Animation
+            </td>
+            <td>
+            Southampton Solent University
+            </td>
+          </tr>
+          <tr>
+            <td class=centred_txt>
+            Jul 2001
+            </td>
+            <td class=centred_txt>
+            Jul 2003
+            </td>
+            <td>
+            National Diploma in Graphic Design
+            </td>
+            <td>
+            Bournemouth & Poole College
+            </td>
+          </tr>
+        </table>
+      </div>
+      <br>
+      <div id=full_table2 class=margin70>
+        <span class='margin70 gen_title small_text'>Online</span>
+        <table class='standard_table decorated decorated_colour margin70'>
+          <tr>
+            <th>
+            Period
+            </th>
+            <th>
+            Course
+            </th>
+            <th>
+            Institution
+            </th>
+          </tr>
+          <tr>
+            <td class=centred_txt>
+            Jan 2014
+            </td>
+            <td>
+            Business Analysis Practitioner <span class=small_text>(IIBA Endorsed)</span>
+            </td>
+            <td>
+            Business Analysis Excellence Ltd
+            </td>
+          </tr>
+          <tr>
+            <td class=centred_txt>
+            Oct 2013
+            </td>
+            <td>
+            Learn To Program: The Fundamentals
+            </td>
+            <td>
+            Coursera <span class=small_text>(University of Toronto)</span>
+            </td>
+          </tr>
+        </table>
+      </div>
     </div>
     <br>
     <br>
