--- a/html/professional.html
+++ b/html/professional.html
@@ -7,7 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="The resume of Thomas Rudge">
   <meta name="author" content="Thomas Rudge">
-  <meta name="keywords" content="Thomas, Rudge, Edward, resume, cv, curriculum vitae, job">
+  <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative, professional">
+  <!-- Open Graph Properties-->
+  <meta property="og:locale" content="en_UK">
+  <meta property="og:title" content="Thomas Rudge">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://www.thomasrudge.co.uk">
+  <meta property="og:image" content="../images/bg/ogimage.gif">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:description" content="The personal resume of Thomas Edward Rudge.">
   <!-- CSS & JS -->
   <link rel="stylesheet" href="../css/main.css">
   <script type="text/javascript" src="../javascript/mobile_navigation.js" async></script>
@@ -45,8 +55,8 @@
       <div id=headerdiv>
         <h1 class=myname>Thomas Rudge</h1>
         <nav id=mainnav>
-	       <ul class=navlist>
-           <li class=navli id=navlihome>
+          <ul class=navlist>
+            <li class=navli id=navlihome>
               <a id=home href="../index.html" title="Home"></a>
             </li>
             <li class=navli id=navliprof_selected>
@@ -64,7 +74,7 @@
             <li class=navli id=navlicontact>
               <a id=cntct href="contact.html" title="Contact me"></a>
             </li>
-	       </ul>
+          </ul>
         </nav>
         <div id=navmobile>
           <a id=mobile_navlink onclick='toggleNavPane(1)'></a>
@@ -81,22 +91,22 @@
                 <span class=main_glyph>&#9874;</span> Professional
               </a>
             </li>
-		        <li>
+            <li>
               <a class=mobile_menu_item href="software.html" title="Personal software projects">
                 <span class=main_glyph>&#9000;</span> Software
               </a>
             </li>
-		        <li>
+            <li>
               <a class=mobile_menu_item href="design.html" title="Design work">
                 <span class=main_glyph>&#9998;</span> Design
               </a>
             </li>
-		        <li>
+            <li>
               <a class=mobile_menu_item href="photography.html" title="Photographs">
                 <span class=main_glyph>&#128247;</span>Photography
               </a>
             </li>
-		        <li>
+            <li>
               <a class=mobile_menu_item href="contact.html" title="Contact me">
                 <span class=main_glyph>&#9993;</span> Contact
               </a>
@@ -133,33 +143,33 @@
         <span class='gen_title no_top no_bottom blue_text'><u>Summary</u></span><br>
       </p>
       <ul  class='gen_text justify med_text margin70 no_top' type='disc'>
-          <li>
-          Sole designer and developer of <a class=normal_link href='software.html#nepos'>Nepos</a>, a point of sale and cash management system currently being distributed in north east India.
-          </li>
-          <li>
-          Proven leadership skills with extensive experience managing operation, test, and implementation teams, across both local and global area. 
-          </li>
-          <li>
-          Capable of achieving operational efficiencies through operations and data analysis, process redesign, and bespoke automation.
-            <ul type='circle'>
-              <li>
-              In my position as a Technical SME I improved the straight through processing of the main reconciliation system by 5% in the first 6 months of the role. The STP improvement equated to four full time employees.
-              </li>
-              <li>
-              Reduced a manual reconciliation process from over an hour to less than 10 minutes, by redesigning the user dashboard layout and automating some of the process. 
-              </li>
-            </ul>
-          </li>
-          <li>
-          Overseen the success of numerous <a class=normal_link href='#projects'>projects</a> as a Business Analyst and TSME, attaining a firm knowledge of the end to end project life cycle and methodologies.
-          </li>
-          <li>
-          High risk awareness. Completed risk assessments, created control frameworks, and performed audits for new and updated operational processes and systems; Both internally and in collaboration with third parties like Sarbanes Oxley and Deloittes.
-          </li>
-          <li>
-          Solid communication skills. Experienced in facilitating requirements workshops, brainstorming sessions, training sessions, presentations, and meetings at all levels. Capable of presenting complex and technical information in a coherent and succinct way.
-          </li>
-        </ul>
+        <li>
+        Sole designer and developer of <a class=normal_link href='software.html#nepos'>Nepos</a>, a point of sale and cash management system currently being distributed in north east India.
+        </li>
+        <li>
+        Proven leadership skills with extensive experience managing operation, test, and implementation teams, across both local and global area. 
+        </li>
+        <li>
+        Capable of achieving operational efficiencies through data analysis, process redesign, and bespoke automation.
+          <ul type='circle'>
+            <li>
+            In my position as a Technical SME I improved the straight through processing of the main reconciliation system by 5% in the first 6 months of the role. The STP improvement equated to four full time employees.
+            </li>
+            <li>
+            Reduced a manual reconciliation process from over an hour to less than 10 minutes, by redesigning the user dashboard layout and automating some of the process. 
+            </li>
+          </ul>
+        </li>
+        <li>
+        Overseen the success of numerous <a class=normal_link href='#projects'>projects</a> as a Business Analyst and TSME, attaining a firm knowledge of the end to end project life cycle and methodologies.
+        </li>
+        <li>
+        High risk awareness. Completed risk assessments, created control frameworks, and performed audits for new and updated operational processes and systems; Both internally and in collaboration with third parties like Sarbanes Oxley and Deloittes.
+        </li>
+        <li>
+        Solid communication skills. Experienced in facilitating requirements workshops, brainstorming sessions, training sessions, presentations, and meetings at all levels. Capable of presenting complex and technical information in a coherent and succinct way.
+        </li>
+      </ul>
     </div>
     <br>
     <div class='gen_div block_'>
