--- a/html/software.html
+++ b/html/software.html
@@ -7,7 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="The resume of Thomas Rudge">
   <meta name="author" content="Thomas Rudge">
-  <meta name="keywords" content="Thomas, Rudge, Edward, resume, cv, curriculum vitae, job">
+  <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative, nepos, software">
+  <!-- Open Graph Properties-->
+  <meta property="og:locale" content="en_UK">
+  <meta property="og:title" content="Thomas Rudge">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://www.thomasrudge.co.uk">
+  <meta property="og:image" content="../images/bg/ogimage.gif">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:description" content="Software projects by Thomas Edward Rudge.">
   <!-- CSS & JS -->
   <link rel="stylesheet" href="../css/main.css">
   <script type="text/javascript" src="../javascript/mobile_navigation.js" async></script>
@@ -45,7 +55,7 @@
       <div id=headerdiv>
         <h1 class=myname>Thomas Rudge</h1>
         <nav id=mainnav>
-	        <ul class=navlist>
+          <ul class=navlist>
             <li class=navli id=navlihome>
               <a id=home href="../index.html" title="Home"></a>
             </li>
@@ -64,7 +74,7 @@
             <li class=navli id=navlicontact>
               <a id=cntct href="contact.html" title="Contact me"></a>
             </li>
-	        </ul>
+          </ul>
         </nav>
         <div id=navmobile>
         <a id=mobile_navlink onclick='toggleNavPane(1)'></a>
@@ -81,22 +91,22 @@
                 <span class=main_glyph>&#9874;</span> Professional
               </a>
             </li>
-		        <li>
+            <li>
               <a id=mobile_selected title="Personal software projects">
                 <span class=main_glyph>&#9000;</span> Software
               </a>
             </li>
-		        <li>
+            <li>
               <a class=mobile_menu_item href="design.html" title="Design work">
                 <span class=main_glyph>&#9998;</span> Design
               </a>
             </li>
-		        <li>
+            <li>
               <a class=mobile_menu_item href="photography.html" title="Photographs">
                 <span class=main_glyph>&#128247;</span>Photography
               </a>
             </li>
-		        <li>
+            <li>
               <a class=mobile_menu_item href="contact.html" title="Contact me">
                 <span class=main_glyph>&#9993;</span> Contact
               </a>
