--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="The resume of Thomas Rudge">
   <meta name="author" content="Thomas Rudge">
-  <meta name="keywords" content="Thomas, Rudge, Edward, resume, cv, curriculum vitae, job">
+  <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative">
+  <!-- Open Graph Properties-->
+  <meta property="og:locale" content="en_UK">
+  <meta property="og:title" content="Thomas Rudge">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://www.thomasrudge.co.uk">
+  <meta property="og:image" content="images/bg/ogimage.gif">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:description" content="The personal resume of Thomas Edward Rudge.">
   <!-- CSS & JS -->
   <link rel="stylesheet" href="css/main.css">
   <script type="text/javascript" src="javascript/mobile_navigation.js" async></script>
@@ -50,26 +60,26 @@
       <div id=headerdiv>
         <h1 class=myname>Thomas Rudge</h1>
         <nav id=mainnav>
-	        <ul class=navlist>
+          <ul class=navlist>
             <li class=navli id=navlihome_selected>
               <a id=home_selected title="Home"></a>
             </li>
-		        <li class=navli id=navliprof>
+            <li class=navli id=navliprof>
               <a id=prof href="html/professional.html" title="Professional work experience"></a>
             </li>
-		        <li class=navli id=navlisoft>
+            <li class=navli id=navlisoft>
               <a id=soft href="html/software.html" title="Personal software projects"></a>
             </li>
-		        <li class=navli id=navlidesign>
+            <li class=navli id=navlidesign>
               <a id=dsgn href="html/design.html#DESIGN" title="Design work"></a>
             </li>
-		        <li class=navli id=navliphoto>
+            <li class=navli id=navliphoto>
               <a id=phtgph href="html/photography.html#PHOTO" title="Photographs"></a>
             </li>
-		        <li class=navli id=navlicontact>
+            <li class=navli id=navlicontact>
               <a id=cntct href="html/contact.html" title="Contact me"></a>
             </li>
-	        </ul>
+          </ul>
         </nav>
         <div id=navmobile>
         <a id=mobile_navlink onclick='toggleNavPane(0)'></a>
@@ -86,22 +96,22 @@
                 <span class=main_glyph>&#9874;</span> Professional
               </a>
             </li>
-		        <li>
+            <li>
               <a class=mobile_menu_item href="html/software.html" title="Personal software projects">
                 <span class=main_glyph>&#9000;</span> Software
               </a>
             </li>
-		        <li>
+            <li>
               <a class=mobile_menu_item href="html/design.html" title="Design work">
                 <span class=main_glyph>&#9998;</span> Design
               </a>
             </li>
-		        <li>
+            <li>
               <a class=mobile_menu_item href="html/photography.html" title="Photographs">
                 <span class=main_glyph>&#128247;</span>Photography
               </a>
             </li>
-		        <li>
+            <li>
               <a class=mobile_menu_item href="html/contact.html" title="Contact me">
                 <span class=main_glyph>&#9993;</span> Contact
               </a>
