Lazy loading of gallery images.
To improve page loading times, images now lazy load as required in the
design and photography pages, rather than all at once.

--- a/html/design.html
+++ b/html/design.html
@@ -21,7 +21,6 @@
   <!-- CSS & JS -->
   <link rel="stylesheet" href="../css/main.css">
   <script type="text/javascript" src="../javascript/slides.js"></script>
-  <script type="text/javascript" src="../javascript/mobile_navigation.js" async></script>
   <!-- Icons-->
   <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png">
@@ -173,66 +172,66 @@
       </div>
     </div>
     <br>
-    <div class=rowcontainer>
+    <div class=rowcontainer id=rc1>
       <div id=dimg07 class=design_div>
-        <img src="../images/design/5katalyst2.png" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg07')">
+        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg07')">
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 5th edition.</p>
       </div>
       <div id=dimg08 class=design_div>
-        <img src="../images/design/5katalyst3.png" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg08')">
+        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg08')">
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 5th edition.</p>
       </div>
       <div id=dimg09 class=design_div>
-        <img src="../images/design/5katalyst4.png" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg09')">
+        <img src="../images/design/lazy_placeholder.gif" alt="Katalyst" title='Katalyst Magazine #5' onclick="expandImageView('dimg09')">
         <p class='gen_text centred small_text invert_text'>An article in the Katalyst magazine, 5th edition.</p>
       </div>
     </div>
     <br>
-    <div class=rowcontainer>
+    <div class=rowcontainer id=rc2>
       <div id=dimg10 class=design_div>
-        <img src="../images/design/nepos.png" alt="Nepos" title='Nepos Logo' onclick="expandImageView('dimg10')">
+        <img src="../images/design/lazy_placeholder.gif" alt="Nepos" title='Nepos Logo' onclick="expandImageView('dimg10')">
         <p class='gen_text centred small_text invert_text'>The logo of the Nepos cash management software.</p>
       </div>
       <div id=dimg11 class=design_div>
-        <img src="../images/design/nepos_splash.png" alt="Nepos" title='Nepos Splash Screen' onclick="expandImageView('dimg11')">
+        <img src="../images/design/lazy_placeholder.gif" alt="Nepos" title='Nepos Splash Screen' onclick="expandImageView('dimg11')">
         <p class='gen_text centred small_text invert_text'>The splash screen of the Nepos cash management software.</p>
       </div>
     </div>
     <br>
-    <div class=rowcontainer>  
+    <div class=rowcontainer id=rc3>  
       <div id=dimg12 class=design_div>
-        <img src="../images/design/GSLL1.png" alt="GSL" title='GSL Brochure' onclick="expandImageView('dimg12')">
+        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Brochure' onclick="expandImageView('dimg12')">
         <p class='gen_text centred small_text invert_text'>The cover page of a brochure create for Gunpati Stock Ltd.</p>
       </div>
       <div id=dimg13 class=design_div>
-        <img src="../images/design/GSLL2.png" alt="GSL" title='GSL Brochure' onclick="expandImageView('dimg13')">
+        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Brochure' onclick="expandImageView('dimg13')">
         <p class='gen_text centred small_text invert_text'>The inner page of a brochure create for Gunpati Stock Ltd.</p>
       </div>
       <div id=dimg14 class=design_div>
-        <img src="../images/design/GSLR.png" alt="GSL" title='GSL Annual Report' onclick="expandImageView('dimg14')">
+        <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Annual Report' onclick="expandImageView('dimg14')">
         <p class='gen_text centred small_text invert_text'>The cover page Gunpati Stock Ltd's Annual Report.</p>
       </div>
     </div>
     <br>
-    <div class=rowcontainer>
+    <div class=rowcontainer id=rc4>
       <div id=dimg15 class=design_div>
-        <img src="../images/design/obsidian_dir.png" alt="Obsidian" title='Obsidian Business Directory' onclick="expandImageView('dimg15')">
+        <img src="../images/design/lazy_placeholder.gif" alt="Obsidian" title='Obsidian Business Directory' onclick="expandImageView('dimg15')">
         <p class='gen_text centred small_text invert_text'>The cover page for a directory of local businesses,<br>created for the Obsidian Business Interface.</p>
       </div>
       <div id=dimg16 class=design_div>
-        <img src="../images/design/obsidian_event.png" alt="Obsidian" title='Obsidian Event Report' onclick="expandImageView('dimg16')">
+        <img src="../images/design/lazy_placeholder.gif" alt="Obsidian" title='Obsidian Event Report' onclick="expandImageView('dimg16')">
         <p class='gen_text centred small_text invert_text'>Obsidian Business Interface event report cover page.</p>
       </div>
       <div id=dimg17 class=design_div>
-        <img src="../images/design/EA1.png" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg17')">
+        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg17')">
         <p class='gen_text centred small_text invert_text'>The cover page of an info-pack created for<br>Entrepreneurs Associates micro finance company.</p>
       </div>
       <div id=dimg18 class=design_div>
-        <img src="../images/design/EA2.png" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg18')">
+        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg18')">
         <p class='gen_text centred small_text invert_text'>An inner page of the EA info-pack.</p>
       </div>
       <div id=dimg19 class=design_div>
-        <img src="../images/design/EA3.png" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg19')">
+        <img src="../images/design/lazy_placeholder.gif" alt="EA" title='Entrepreneurs Associates' onclick="expandImageView('dimg19')">
         <p class='gen_text centred small_text invert_text'>An inner page of the EA info-pack.</p>
       </div>
     </div>
